[gd_scene load_steps=4 format=2]

[ext_resource path="res://AIButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://AIInterface.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 896, 256 )

[node name="AIInterface" type="Area2D"]
script = ExtResource( 2 )

[node name="Level1" parent="." instance=ExtResource( 1 )]
position = Vector2( -576, 0 )

[node name="Level2" parent="." instance=ExtResource( 1 )]
position = Vector2( -192, 0 )

[node name="Level3" parent="." instance=ExtResource( 1 )]
position = Vector2( 192, 0 )

[node name="Level4" parent="." instance=ExtResource( 1 )]
position = Vector2( 576, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
[connection signal="mouse_exited" from="." to="." method="_on_AIInterface_mouse_exited"]
